traefik/main/overlays/production/service-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: api
      port: 8080
      targetPort: 8080
