traefik/main/overlays/production/ingress-ebrains-redirect-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/permanent-redirect: https://jupyterjsc.pages.jsc.fz-juelich.de/docs/jupyterjsc/
  name: ebrains-redirect-1
  namespace: traefik
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docs.jupyter-ebrains.jsc.fz-juelich.de
    secretName: ebrains-redirect-1
  rules:
  - host: docs.jupyter-ebrains.jsc.fz-juelich.de
