traefik/main/overlays/production/ingress-portalgauss-redirect-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/permanent-redirect: https://jupyterjsc.pages.jsc.fz-juelich.de/docs/jupyterjsc/
  name: portalgauss-redirect-1
  namespace: traefik
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docs.portal.gauss-centre.eu
    secretName: portalgauss-redirect-1
  rules:
  - host: docs.portal.gauss-centre.eu
